--- a/TSP.csproj
+++ b/TSP.csproj
@@ -48,7 +48,11 @@
     <Compile Include="City.cs" />
     <Compile Include="CityPositions.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Distance.cs" />
     <Compile Include="FileLoader.cs" />
+    <Compile Include="GA.cs" />
+    <Compile Include="Genome.cs" />
+    <Compile Include="GenomeComparer.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +61,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TravellingSalesmanProblem.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
