GreedyStrategy added, but still has bugs if the route isn't full

--- a/TSP.csproj
+++ b/TSP.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GA.cs" />
     <Compile Include="Genome.cs" />
     <Compile Include="GenomeComparer.cs" />
+    <Compile Include="GreedyStrategy.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
