--- a/TSP.csproj
+++ b/TSP.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Distance.cs" />
     <Compile Include="FileLoader.cs" />
     <Compile Include="GA.cs" />
+    <Compile Include="GeneticAlgorithmStrategy.cs" />
     <Compile Include="Genome.cs" />
     <Compile Include="GenomeComparer.cs" />
     <Compile Include="GreedyStrategy.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulatedAnnealingStrategy.cs" />
+    <Compile Include="Util.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
