--- a/TSP.csproj
+++ b/TSP.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cities.cs" />
     <Compile Include="City.cs" />
     <Compile Include="CityPositions.cs" />
     <Compile Include="Constants.cs" />
@@ -55,15 +56,19 @@
     <Compile Include="Genome.cs" />
     <Compile Include="GenomeComparer.cs" />
     <Compile Include="GreedyStrategy.cs" />
+    <Compile Include="Link.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Population.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulatedAnnealingStrategy.cs" />
+    <Compile Include="Tour.cs" />
+    <Compile Include="TSP.cs" />
     <Compile Include="Util.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
